+ | SML | Tweak/AboutMe | Wordchoice tweaks to about me section, Might tweak again later.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
 	                       	<span class="biggerfont">
-	                        I am self-taught GIS developer</span> What does that even mean? Idk... I think I basically I use knowledge of GIS and web-design, to analyze and visualize data in cool ways. Those visuals become narratives, and those narratives (hopefully) impact change. That's kind of what I'm going for.
+	                        I am a self-taught GIS developer</span> so basically I'm a Peanut Butter & Jelly Sandwich of: Map-Analyst and Web-Designer. I create analytic-methods to analyze geospatial datasets, and visualize them in cool meaningful ways. Those visuals become narratives, and those narratives (hopefully) empower positive change. 
 	                        <br><br>
 	                        <span class="biggerfont">
 	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on intelligent-routing for safer, quieter, more enjoyable bicycle commutes.   
@@ -148,7 +148,7 @@
 	                        <br><br>
 	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in using GIS methods to improve estimates of agricultural water-use. I have been formally acknowledged in a publication by the World Resources Institute for my GIS contributions to the Forest Conservation Natural Infrastructure Program.
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, QGIS, Spatial Analysis Toolsets, OpenStreetMaps, iD, JOSM, HTML5, CSS, Javascript, jQuery, git, SQL, Python, Mapbox-GL, Leaflet, Aerial Drone Mapping, Routing Engine Software, City Engine, Database Management BMPs, Microsoft Office Suite, along with several others supplementary programs.
+	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, QGIS, Spatial Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS, Javascript, jQuery, git, SQL, Python, Mapbox-GL, Leaflet, Aerial Drone Mapping, Routing Engine Software, City Engine, Database Management BMPs, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
 	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
 	                        <br><br>
@@ -217,7 +217,7 @@
 		                                GIS ANALYSIS<br><br>
 		                            </div>
 		                            <div class="project-name">
-		                                Finding Tucson's Safest Bicycle Roads for 'Critical Mass' Group-Rides<br><br>(Personal Project) 
+		                                Mapping Tucson's Road Network, Optimized for Bicycle-Safety<br><br>(Personal Project) 
 		                            </div>
 		                        </div>
 		                    </div>
