+ | SML | Tweaks/AboutMe -- Added some stuff and made it a little less casual. I guess its kinda serious

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<div class="row">
 			<div id="contactinfo" class="infobox wow fadeInDown text-vertical-center col-sm-offset-3 col-sm-6 col-xs-12">
 				<div class="wow fadeInLeft" data-wow-delay="0.5s"><h1>DYLAN SCOTT COBEAN</h1></div>
-				<div class="wow fadeInRight" data-wow-delay="1s"><h4>Environmentalist / Urbanist / Cartographer / Data Analyst</h4></div>
+				<div class="wow fadeInRight" data-wow-delay="1s"><h4>Activist / Urbanist / Environmentalist / Cartographer<!--  / Data Analyst --></h4></div>
 				<div class="wow fadeInUp" data-wow-delay="1.2s"><hr class="medium"></div>
 				<!--<h3>A Personal Webpage</h3>-->
 				<div class="text-center center-block site-header">
@@ -138,25 +138,26 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
 	                        <h3>
 	                       	<span class="biggerfont">
-	                        I am a self-taught GIS developer</span> so basically I'm a Peanut Butter & Jelly Sandwich of: Map-Analyst and Web-Designer. I create analytic-methods to analyze geospatial datasets, and visualize them in cool meaningful ways. Those visuals become narratives, and those narratives (hopefully) empower positive change. 
+	                        I am a self-taught GIS Developer</span>, so basically, I use my knowledge of web-development, geospatial-analysis, and design to visualize maps in cool meaningful ways. Those visuals become narratives, and those narratives (hopefully in some small way) empower positive change for the world. 
 	                        <br><br>
 	                        <span class="biggerfont">
-	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on intelligent-routing for safer, quieter, more enjoyable bicycle commutes.   
+	                        I am the founder of TucsonPathways.org</span> - a data-driven bicycle advocacy organization, focused on visualizing cities infrastructure safer, quieter, more enjoyable bicycle commutes.   
 	                        <br><br>
 	                        <span class="biggerfont">
 	                        I graduated with distinction</span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
 	                        <br><br>
-	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in using GIS methods to improve estimates of agricultural water-use. I have been formally acknowledged in a publication by the World Resources Institute for my GIS contributions to the Forest Conservation Natural Infrastructure Program.
-	                        <br><br>
 	                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, QGIS, Spatial Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS, Javascript, jQuery, git, SQL, Python, Mapbox-GL, Leaflet, Aerial Drone Mapping, Routing Engine Software, City Engine, Database Management BMPs, Microsoft Office Suite, along with several others supplementary programs.
 	                        <br><br>
-	                        <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
+	                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survey for my work in using GIS methods to improve estimates of agricultural water-use. I have been formally acknowledged in a publication by the World Resources Institute for my GIS contributions to the Forest Conservation Natural Infrastructure Program.
 	                        <br><br>
-	                        <!--<div><span class="biggerfont">Questions I like to ask </span>include 'how can we better understand why cities grow? How does access to park-space correlate with human health? feurban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
-	                        <br><br>-->
+	                        <span class="biggerfont">Through years past </span>I've worked as a bike mechanic, warehouse laborer, bartender, hydrological technican, garbage collector, community-farm laborer. I've bike-toured across the country, competed in the Ultimate Frisbee College National Championships, and volunteered as youth rock-climbing instructor.
+							<br><br>
+	                        <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
+	                        <br><br> -->
+							<div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban planning context. Basically in mathematics, functions can converge or diverge respectively to stabile or unstable equalibrium points. I apperciate the simplicity of that concept when applied to our societies' built urban systems - cities all of which, designed and developed under various laws/policies are slowly harmonizing or creating disonance - whether economic stratification, environmental decline, racial inequity, political polarization, gentrification. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
+	                        <br><br>
+	                        <!-- <div><span class="biggerfont">Questions I like to ask </span>'How can we better understand the patterns in how cities grow and thrive? Why despite all our efforts, does gentrification always result in wealth stratification of communties? How does access to park-space correlate with human health? How do we better activate people who want to bicycle commute but are intimindated by safety? How do we better desegregate socio-economic classes in cities? How can cities better harmonize with natural processes in our surrounding ecosystem? -->
 
-	                        <!--	                        <span class="biggerfont">I have worked </span>as a bike mechanic, GIS analyst, warehouse laborer, technical writer, bartender, farm-laborer, freelance-cartographer, and hydrological technician. 
-	                       	<br><br>-->
 	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
 	                        <br><br>-->
 	                        <!--<div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven analysis - GIS or otherwise. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development stages, to final presentation of results. 
@@ -166,14 +167,14 @@
 	                        </h3>
                         </div>
 					
-			    			<!--<div class="aboutmefooter col-xs-10 col-sm-offset-1"><i>More than halfway through my degree program in Physics, I realized I was happier learning about the natural environment around me. I switched my major to Applied Mathematics & Environmental Hydrology and never looked back. I've had the great opportunity to work for both large environmental research institutions, along with small community-based environmental organizations. This diversity have given me a unique prespective on environmental sustainability and new urbanism. I've simultaniously created a strong foundation of skills in critical thinking, data visualization, and geospatial analysis. 
+			    			<!--<div class="aboutmefooter col-xs-10 col-sm-offset-1"><i>More than halfway through my degree program in Physics, I realized I was happier learning about the natural environment around me. I switched my major to Applied Mathematics & Environmental Hydrology and never looked back. I've had the great opportunity to work for both large environmental research institutions, along with small community-based environmental organizations. This diversity have given me a unique prespective on environmental sustainability and new urbanism. I've simultaniously created a strong foundation of skills in critical thinking, data visualization, and geospatial analysis. -->
 							<br><br>
-							I've always been facinated by Stability Theory in Applied Mathematics Coursework - the concept of stable or instable equilibrium points where functions converge or diverge respectively. I apperciate the simplicity of that concept in our societies' built urban systems, slowly harmonizing or creating disonance with our ecosystem's natural processes.</i></div>-->
 
 			    			
 
 						</div>
-					</div><!--container-->		
+					</div>
+					<!--container-->		
 			    </div>
 				<!--Worksample Section-->
 		        <div role="tabpanel" class="tab-pane fade" id="worksamples">
