+ | SML | Hotfix/Worksample -- Fixed broken link

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 							<br><br>
 	                        <!-- <div><span class="biggerfont">My ongoing subject matter expertise </span>includes urban analytics, bicycle infrastructure, open-source web mapping, forest conservation, remote sensing, UX and UI design, statistics, and bicycle tech.
 	                        <br><br> -->
-							<div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban planning context. Basically in mathematics, functions can converge or diverge respectively to stabile or unstable equalibrium points. I apperciate the simplicity of that concept when applied to our societies' built urban systems - cities all of which, designed and developed under various laws/policies are slowly harmonizing or creating disonance - whether economic stratification, environmental decline, racial inequity, political polarization, gentrification. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
-	                        <br><br>
+							<!-- <div><span class="biggerfont">I've always been facinated by </span> stability theory applied to an urban analysis. Cities across the planet are subject to various laws and policies. All of which are harmonizing or destabilizing - whether economic stratification, environmental decline, racial inequity, political polarization, literacy. Most of the work I do has the backdrop of wanting to better understand those topics and how they all relate.</div>
+	                        <br><br> -->
 	                        <!-- <div><span class="biggerfont">Questions I like to ask </span>'How can we better understand the patterns in how cities grow and thrive? Why despite all our efforts, does gentrification always result in wealth stratification of communties? How does access to park-space correlate with human health? How do we better activate people who want to bicycle commute but are intimindated by safety? How do we better desegregate socio-economic classes in cities? How can cities better harmonize with natural processes in our surrounding ecosystem? -->
 
 	                        <!--<div><span class="biggerfont"> My current research focuses on </span> better understanding 'the city as an organism.' Cities scale themselves with time, human capital, and economic growth. What parameters govern this growth? What systematic relationships govern all city growth as universalities? The better we understand these questions, the better we can create places for citizens to thrive. 
@@ -210,7 +210,7 @@
 		                </a>
 		            </div>
 		            <div class="col-lg-4 col-xs-6">
-		                <a href="https://dylansc22.github.io/tnr" class="portfolio-box">
+		                <a href="https://tucsonauts.github.io/tnr" class="portfolio-box">
 		                    <img src="img/Tucson3.png" class="img-responsive" alt="">
 		                    <div class="portfolio-box-caption">
 		                        <div class="portfolio-box-caption-content">
