--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
     <link rel="stylesheet" href="css/animate.css" />
     <script src="js/wow.min.js"></script>
 
-    <!--Awesome Fonts Library-->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-    />
     <!-- Google Fonts (from https://www.google.com/fonts )-->
     <link
       href="http://fonts.googleapis.com/css?family=Fjalla+One"
@@ -90,6 +85,9 @@
       rel="stylesheet"
       type="text/css"
     />
+
+    <script src="https://kit.fontawesome.com/424cd50bdd.js" crossorigin="anonymous"></script>
+
   </head>
 
   <body id="bootstrapoverrides">
@@ -176,6 +174,17 @@
                 data-wow-delay="2s"
               ></i
             ></a>
+            <!--Twitter-->
+            <a
+              href="https://www.strava.com/athletes/9512777"
+              title="Strava"
+              data-toggle="tooltip"
+              data-placement="bottom"
+              ><i
+                class="fab fa-strava fa-3x social-st grow wow fadeInRight"
+                data-wow-delay="2.4s"
+              ></i
+            ></a>
             <!--Skype-->
             <!-- <a
               href="skype:dylanvideochat?userinfo"
@@ -198,7 +207,7 @@
                 class="btn btn-lg btn-warning"
                 role="button"
                 style="padding-top: 0px; padding-bottom: 0px"
-                ><h5>and now click here</h5></a
+                ><h5>and now click this</h5></a
               >
             </div>
             <!-- Circlur Arrow Button-->
@@ -282,12 +291,12 @@
                       odd-jobs and internships throughout to pay my way through
                       college. <br /><br />
                       <span class="biggerfont">I am a self-learner </span>in a
-                      wide array of technical softwares - ArcGIS, QGIS,
-                      Spatial Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5,
-                      CSS, Javascript ES6, git, SQL, Python, Mapbox-GL,
-                      Leaflet, Node, Aerial Drone Mapping, Routing Engine Software,
-                      City Engine, Database Management BMPs, Microsoft Office
-                      Suite, along with several others supplementary programs.
+                      wide array of technical softwares - ArcGIS, QGIS, Spatial
+                      Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS,
+                      Javascript ES6, git, SQL, Python, Mapbox-GL, Leaflet,
+                      Node, Aerial Drone Mapping, Routing Engine Software, City
+                      Engine, Database Management BMPs, Microsoft Office Suite,
+                      along with several others supplementary programs.
                       <br /><br />
                       <span class="biggerfont"
                         >I am a published technical writer </span
@@ -299,8 +308,8 @@
                       Infrastructure Program. <br /><br />
                       <span class="biggerfont">Through years past </span>I've
                       worked as a bike mechanic, warehouse laborer, bartender,
-                      hydrological technican, garbage collector, community-farm
-                      laborer. I've bike-toured across the country, competed in
+                      hydrological technican, garbage collector, research analyst, community-farm
+                      laborer, and freelance movie critic. I've bike-toured across the country, competed in
                       the Ultimate Frisbee College National Championships, and
                       volunteered as youth rock-climbing instructor.
                       <br /><br />
