+ | SML | Tweaks/AboutMe -- Just some wordchoice changes

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
     />
 
     <!--Skype Call Button-->
-    <script
+    <!-- 
+      <script
       type="text/javascript"
       src="http://www.skypeassets.com/i/scom/js/skype-uri.js"
-    ></script>
+    ></script> 
+    -->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -108,7 +110,7 @@
           </div>
           <div class="wow fadeInRight" data-wow-delay="1s">
             <h4>
-              Activist / Urbanist / Environmentalist / Cartographer<!--  / Data Analyst -->
+              Activist / Urbanist / Environmentalist / Analyst<!--  / Data Analyst -->
             </h4>
           </div>
           <div class="wow fadeInUp" data-wow-delay="1.2s">
@@ -154,7 +156,7 @@
             ></a>
             <!--Gmail-->
             <a
-              href="mailto:dylan.cobean@gmail.com"
+              href="mailto:hellodylanscott@gmail.com"
               title="Email"
               data-toggle="tooltip"
               data-placement="bottom"
@@ -272,7 +274,7 @@
                     <h3>
                       <span class="biggerfont">
                         I am a self-taught GIS Developer</span
-                      >, so essentially I use my knowledge of web-development,
+                      > using my knowledge of web-development,
                       geospatial-analysis, and design to visualize maps in cool
                       meaningful ways. Those visuals become narratives, and
                       those narratives (hopefully in a small way) empower
@@ -295,7 +297,7 @@
                       Analysis Toolsets, OpenStreetMap, iD, JOSM, HTML5, CSS,
                       Javascript ES6, git, SQL, Python, Mapbox-GL, Leaflet,
                       Node, Aerial Drone Mapping, Routing Engine Software, City
-                      Engine, Database Management BMPs, Microsoft Office Suite,
+                      Engine, Database Management, Microsoft Office Suite,
                       along with several others supplementary programs.
                       <br /><br />
                       <span class="biggerfont"
@@ -307,8 +309,8 @@
                       contributions to the Forest Conservation Natural
                       Infrastructure Program. <br /><br />
                       <span class="biggerfont">Through years past </span>I've
-                      worked as a bike mechanic, warehouse laborer, bartender,
-                      hydrological technican, garbage collector, research analyst, community-farm
+                      worked as a bike mechanic, warehouse laborer, bartender, GIS analyst, 
+                      hydrological technican, waste collector, research analyst, community-farm
                       laborer, and freelance movie critic. I've bike-toured across the country, competed in
                       the Ultimate Frisbee College National Championships, and
                       volunteered as youth rock-climbing instructor.
