+ | SML | Tweak/Name&Resume -- Updated to Dylan Scott on Contact Card and Resume

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Dylan Scott Cobean</title>
+    <title>Dylan Scott</title>
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet" />
 
@@ -106,7 +106,7 @@
           class="infobox wow fadeInDown text-vertical-center col-sm-offset-3 col-sm-6 col-xs-12"
         >
           <div class="wow fadeInLeft" data-wow-delay="0.5s">
-            <h1>DYLAN SCOTT COBEAN</h1>
+            <h1>DYLAN SCOTT</h1>
           </div>
           <div class="wow fadeInRight" data-wow-delay="1s">
             <h4>
@@ -455,29 +455,6 @@
 		            </div>
 		        </div>-->
 
-            <div role="tabpanel" class="tab-pane fade" id="resumesection">
-              <div class="container">
-                <div class="row">
-                  <div class="text-vertical-center">
-                    <iframe
-                      src="https://drive.google.com/file/d/1_XgcllE5XknunfbPeQKN9MQ6eW6lB2v7/preview"
-                      width="80%"
-                      height="700"
-                    ></iframe>
-                    <div>
-                      <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
-                      <a
-                        type="button"
-                        href="pdf/Resume - Dylan Cobean - 2 pages.pdf"
-                        class="btn btn-primary"
-                        download="DylanCobean_Resume.pdf"
-                        >Download</a
-                      >
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -506,15 +483,15 @@
               <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
               <a
                 type="button"
-                href="pdf/Resume - Dylan Cobean - 2 pages.pdf"
+                href="pdf/Resume - Dylan Scott.pdf"
                 class="btn btn-primary"
-                download="DylanCobean_Resume.pdf"
+                download="Dylan Scott is a great team member. I vote hire him.pdf"
                 >Download</a
               >
             </div>
             <div class="modal-body">
               <iframe
-                src="https://drive.google.com/file/d/1_XgcllE5XknunfbPeQKN9MQ6eW6lB2v7/preview"
+                src="https://drive.google.com/file/d/1ekb51O_4JwwvxVbmKAZ0vjcjOVSgGJCI/preview"
                 width="100%"
                 height="800"
               ></iframe>
