+ | SML | Tweak/Linkedin -- Updated linkedin link to DylanScott22

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             ></a>
             <!--Linkedin-->
             <a
-              href="https://www.linkedin.com/in/dylancobean"
+              href="https://www.linkedin.com/in/dylanscott22"
               title="Linkedin"
               data-toggle="tooltip"
               data-placement="bottom"
