+ | SML | Tweak/ContactCard -- Removed Twitter, added Instagram

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               ></i
             ></a>
             <!--Twitter-->
-            <a
+            <!-- <a
               href="https://twitter.com/MrDylanScott"
               title="Twitter"
               data-toggle="tooltip"
@@ -175,8 +175,19 @@
                 class="fa fa-twitter fa-3x social-tw grow wow fadeInDown"
                 data-wow-delay="2s"
               ></i
+            ></a> -->
+            <!--Instagram-->
+            <a
+              href="https://instagram.com/fairlyirresponsible"
+              title="Instagram"
+              data-toggle="tooltip"
+              data-placement="bottom"
+              ><i
+                class="fa fa-instagram fa-3x social-tw grow wow fadeInDown"
+                data-wow-delay="2s"
+              ></i
             ></a>
-            <!--Twitter-->
+            <!--Strava-->
             <a
               href="https://www.strava.com/athletes/9512777"
               title="Strava"
