+ | SML | Tweak/CodeCleanup -- Deleting some old code.

--- a/index.html
+++ b/index.html
@@ -68,14 +68,6 @@
       rel="stylesheet"
     />
 
-    <!--Skype Call Button-->
-    <!-- 
-      <script
-      type="text/javascript"
-      src="http://www.skypeassets.com/i/scom/js/skype-uri.js"
-    ></script> 
-    -->
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -110,13 +102,12 @@
           </div>
           <div class="wow fadeInRight" data-wow-delay="1s">
             <h4>
-              Activist / Urbanist / Environmentalist / Analyst<!--  / Data Analyst -->
+              Activist / Urbanist / Environmentalist / Analyst
             </h4>
           </div>
           <div class="wow fadeInUp" data-wow-delay="1.2s">
             <hr class="medium" />
           </div>
-          <!--<h3>A Personal Webpage</h3>-->
           <div class="text-center center-block site-header">
             <!--Resume-->
             <a
@@ -165,17 +156,6 @@
                 data-wow-delay="1.8s"
               ></i
             ></a>
-            <!--Twitter-->
-            <!-- <a
-              href="https://twitter.com/MrDylanScott"
-              title="Twitter"
-              data-toggle="tooltip"
-              data-placement="bottom"
-              ><i
-                class="fa fa-twitter fa-3x social-tw grow wow fadeInDown"
-                data-wow-delay="2s"
-              ></i
-            ></a> -->
             <!--Instagram-->
             <a
               href="https://instagram.com/fairlyirresponsible"
@@ -198,17 +178,6 @@
                 data-wow-delay="2.4s"
               ></i
             ></a>
-            <!--Skype-->
-            <!-- <a
-              href="skype:dylanvideochat?userinfo"
-              title="Skype"
-              data-toggle="tooltip"
-              data-placement="bottom"
-              ><i
-                class="fa fa-skype fa-3x social-sk grow wow fadeInRight"
-                data-wow-delay="2.4s"
-              ></i
-            ></a> -->
           </div>
         </div>
 
@@ -223,14 +192,7 @@
                 ><h5>and now click this</h5></a
               >
             </div>
-            <!-- Circlur Arrow Button-->
-            <!--
-						<div id="enter" class="text-vertical-center wow bounceInUp" data-wow-delay="3s">
-                    	<a href="#aboutme" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
-                        <i class="fa fa-angle-double-down"></i>
-                    	</a>
-                    	</div>
-                    	-->
+          </div>
           </div>
         </div>
       </div>
@@ -366,7 +328,7 @@
                     </div>
                   </div>
                 </a>
-              </div>
+                  </div>
               <div class="col-lg-4 col-xs-6">
                 <a
                   href="http://pubs.usgs.gov/sir/2011/5166/"
@@ -591,6 +553,7 @@
         </div>
       </div>
     </div>
+
     <div id="mapid" class="wow fadeIn" data-wow-delay="4s"></div>
     <script>
       $(document).ready(function () {
